첫 p5 플러그인 프로젝트

--- a/index.html
+++ b/index.html
@@ -3,9 +3,13 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>첫커밋</title>
+    <title>IMD242 김민조의 페이지</title>
   </head>
   <body>
-    <h1>IMD242 민조의 페이지</h1>
+    <h1>IMD242_202120218_김민조</h1>
+    <h2>9주차</h2>
+    <p>
+      <a href="./w9/first_p5_js/">첫번째 프로젝트</a>
+    </p>
   </body>
 </html>
