--- a/index.html
+++ b/index.html
@@ -11,5 +11,12 @@
     <p>
       <a href="./w9/first_p5_js/">첫번째 프로젝트</a>
     </p>
+    <p>
+      <a href="./w9/second_p5_js/index.html">9주차 과제</a>
+    </p>
+    <h2>10주차</h2>
+    <p>
+      <a href="./w10/video Capture/index.html">비디오 캡쳐</a>
+    </p>
   </body>
 </html>
