--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
   </head>
   <body>
     <h1>IMD242_202120218_김민조</h1>
+    <h2>8주차</h2>
+    <p>
+      <a href="./w10/video Capture/index.html">비디오 캡쳐</a>
+    </p>
     <h2>9주차</h2>
     <p>
       <a href="./w9/first_p5_js/">첫번째 프로젝트</a>
