10주차 과제 커밋

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     </p>
     <h2>10주차 과제</h2>
     <p>
-      <a href="./w10_hw/index.html">10주차 과제</a>
+      <a href="./w10_hw/confetti_fin/index.html">confetti_fin 전환</a>
     </p>
   </body>
 </html>
